tests/error/misc_errors/unreachable_2.err
Error: Unreachable (at $FILE:10:4)
   | 
 8 |     else:
 9 |         return 1
10 |     x = 42
   |     ^^^^^^ This code is not reachable

Guppy compilation failed due to 1 previous error
